k8s/app-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reg-app
spec:
  selector:
    matchLabels:
      app: FE
  template:
    metadata:
      name: task-app-pod
      labels:
        app: FE
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: task-app-cont
        image: oladayur/cicd-demo:v2
        ports:
        - containerPort: 8080
