k8s/cicd-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cicd-app
  labels:
    app: cicd
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cicd
  template:
    metadata:
      labels:
        app: cicd
    spec:
      containers:
      - name: cicd
        image: cezeike39/docker:cicd
---

apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: cicd
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
