k8s/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017

---
apiVersion: v1
kind: Service
metadata:
  name: reg-app-svc
spec:
  type: NodePort
  selector:
    app: FE
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 31023
